# multi_agent_a2a

./: .gitignore  IMAGE_CAPTION_ADDITION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_IMAGE_CAPTION.md  __main__.py  agent.py  agent_executor.py  app.py  image_caption_executor.py  image_caption_main.py  orchestrator_agent.py  orchestrator_executor.py  orchestrator_main.py  pyproject.toml  requirements.txt  run_demo.sh  test_client.py
.streamlit/: config.toml
config/: orchestrator.yaml
config/agents/: external_api_agent.yaml  image_caption.yaml  iris_classifier.yaml  simple_rag.yaml
docs/: INTEGRATING_EXTERNAL_APPS.md  INTEGRATION_CHECKLIST.md  OCI_SETUP.md
scripts/: check_agents.sh  run_demo.sh  run_streamlit.sh  start_agents.sh  stop_agents.sh
src/agents/external_api_agent/: README.md  __init__.py  agent.py  executor.py  main.py
src/agents/image_caption/: agent.py  executor.py  main.py
src/agents/iris_classifier/: __init__.py  agent.py  executor.py  main.py  train.py
src/agents/iris_classifier/models/: iris_rf_model.pkl
src/agents/orchestrator/: agent_host.py  executor.py  executor_host.py  main.py  main_host.py
src/agents/simple_rag/: executor.py  main.py
src/utils/: config_loader.py  oci_llm.py  remote_connection.py
tests/: test_iris_classifier.py
